@@ -19,13 +19,13 @@
   <modelVersion>4.0.0</modelVersion>
   <artifactId>cxbox-base</artifactId>
   <packaging>pom</packaging>
-  <version>3.0.6-SNAPSHOT</version>
+  <version>4.0.0-M2-SNAPSHOT</version>
   <name>IO Cxbox - Base</name>
 
   <parent>
     <groupId>org.cxbox</groupId>
     <artifactId>cxbox-bom</artifactId>
-    <version>3.0.6-SNAPSHOT</version>
+    <version>4.0.0-M2-SNAPSHOT</version>
     <relativePath>../cxbox-bom/pom.xml</relativePath>
   </parent>
 
@@ -63,36 +63,31 @@
     <dollar.sign>$</dollar.sign>
 
     <!-- compiler settings -->
-    <maven.compiler.source>1.8</maven.compiler.source>
-    <maven.compiler.target>1.8</maven.compiler.target>
+    <maven.compiler.source>17</maven.compiler.source>
+    <maven.compiler.target>17</maven.compiler.target>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-
+    <hibernate-commons-annotations.version>6.0.6.Final</hibernate-commons-annotations.version>
     <!-- dependencies versions -->
-    <commons-org.version>2.7</commons-org.version>
-    <commons-collections4.version>4.1</commons-collections4.version>
-    <commons-beanutils.version>1.9.4</commons-beanutils.version>
-    <commons-fileupload.version>1.3.3</commons-fileupload.version>
-    <commons-lang.version>2.3</commons-lang.version>
-    <commons-text.version>1.9</commons-text.version>
+    <commons-io.version>2.13.0</commons-io.version>
+    <commons-collections4.version>4.4</commons-collections4.version>
+    <commons-lang3.version>3.13.0</commons-lang3.version>
+    <commons-text.version>1.10.0</commons-text.version>
     <juel.version>2.2.7</juel.version>
-    <javapoet.version>1.10.0</javapoet.version>
-    <guava.version>30.0-jre</guava.version>
-    <cron-utils.version>9.1.3</cron-utils.version>
-    <reflections.version>0.9.11</reflections.version>
-    <auto-service.version>1.0-rc4</auto-service.version>
+    <javapoet.version>1.13.0</javapoet.version>
+    <guava.version>32.1.1-jre</guava.version>
+    <auto-service.version>1.1.1</auto-service.version>
 
     <!--Test-->
-    <compile-testing.version>0.15</compile-testing.version>
+    <compile-testing.version>0.21.0</compile-testing.version>
     <javax.el.version>3.0.0</javax.el.version>
+
+
+    <!--plugins-->
+    <maven-war-plugin.version>3.3.2</maven-war-plugin.version>
   </properties>
 
   <dependencyManagement>
     <dependencies>
-      <dependency>
-        <groupId>org.springframework.security</groupId>
-        <artifactId>spring-security-test</artifactId>
-        <version>${spring-security.version}</version>
-      </dependency>
       <dependency>
         <groupId>de.odysseus.juel</groupId>
         <artifactId>juel-api</artifactId>
@@ -111,22 +106,12 @@
       <dependency>
         <groupId>commons-io</groupId>
         <artifactId>commons-io</artifactId>
-        <version>${commons-org.version}</version>
+        <version>${commons-io.version}</version>
       </dependency>
       <dependency>
         <groupId>org.apache.commons</groupId>
         <artifactId>commons-collections4</artifactId>
         <version>${commons-collections4.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>commons-beanutils</groupId>
-        <artifactId>commons-beanutils</artifactId>
-        <version>${commons-beanutils.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>commons-fileupload</groupId>
-        <artifactId>commons-fileupload</artifactId>
-        <version>${commons-fileupload.version}</version>
       </dependency>
       <dependency>
         <groupId>com.squareup</groupId>
@@ -139,19 +124,9 @@
         <version>${guava.version}</version>
       </dependency>
       <dependency>
-        <groupId>commons-lang</groupId>
-        <artifactId>commons-lang</artifactId>
-        <version>${commons-lang.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>com.cronutils</groupId>
-        <artifactId>cron-utils</artifactId>
-        <version>${cron-utils.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>org.reflections</groupId>
-        <artifactId>reflections</artifactId>
-        <version>${reflections.version}</version>
+        <groupId>org.apache.commons</groupId>
+        <artifactId>commons-lang3</artifactId>
+        <version>${commons-lang3.version}</version>
       </dependency>
       <dependency>
         <groupId>com.google.auto.service</groupId>
@@ -193,6 +168,14 @@
               </goals>
             </execution>
           </executions>
+          <configuration>
+            <excludes>
+              <exclude>
+                <groupId>org.projectlombok</groupId>
+                <artifactId>lombok</artifactId>
+              </exclude>
+            </excludes>
+          </configuration>
         </plugin>
 
         <plugin>
@@ -255,6 +238,13 @@
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-surefire-plugin</artifactId>
           <version>${maven-surefire-plugin.version}</version>
+          <configuration>
+            <argLine>
+              --add-opens=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED
+              --add-opens=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED
+              --add-opens=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED
+            </argLine>
+          </configuration>
         </plugin>
 
         <plugin>
@@ -284,7 +274,7 @@
         <artifactId>maven-javadoc-plugin</artifactId>
         <configuration>
             <doclint>none</doclint>
-            <source>8</source>
+            <source>17</source>
           </configuration>
         <executions>
           <execution>
@@ -302,7 +292,7 @@
     <dependency>
       <groupId>org.projectlombok</groupId>
       <artifactId>lombok</artifactId>
-      <scope>provided</scope>
+      <optional>true</optional>
     </dependency>
   </dependencies>
 
